# portist

./: CONTEXT.md  README.md  angular.json  bump.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.spec.json
.github/workflows/: release.yml
docs/: auto-update.md
docs/adr/: 0001-no-elevated-kill-seam.md  0002-grouping-by-process-not-rule-registry.md  0003-no-ts-codegen-for-seam.md
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: details.rs  docker.rs  killer.rs  lib.rs  main.rs  ports.rs
src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
src/app/app/: app.css  app.html  app.ts
src/app/core/: models.ts  persisted-signal.spec.ts  persisted-signal.ts  port-bridge.ts  port-catalog.spec.ts  port-catalog.ts  shell-api-service.ts  shell-api.ts  tauri-port-bridge.ts
src/app/detail/: detail-session-service.spec.ts  detail-session-service.ts  detail-session.ts  formatters.ts  port-detail-fields.ts
src/app/i18n/: en.ts  inline-loader.ts  label-pipe.ts  label.spec.ts  label.ts  lang.ts  ru.ts
src/app/ports/: builtin-rules.ts  group-order.ts  group-rule.ts  grouped-port.ts  port-grouper-service.ts  port-grouper.ts  port-inventory-service.ts  port-inventory.ts
src/app/settings/: language-service.ts  preferences-service.ts  settings-codecs.spec.ts  settings.css  settings.html  settings.ts  theme-service.ts  theme.ts
src/app/testing/: fake-port-bridge.ts
src/app/update/: app-updater-service.ts  (+1 more)
(+24 files in other folders)
